--- a/Model_Contents.tex
+++ b/Model_Contents.tex
@@ -176,7 +176,7 @@ The \emph{atomic weight of an element} is the relative weight of one of its atom
 \newcounter{newcountfigure}%创建新计数器
 \definecolor{purple4}{RGB}{85,26,139}%定义颜色purple4
 \DeclareSIUnit\ppm{ppm}%creat a new unit named ppm
-\texorpdfstring{}%想在标题中加入数学公式时，把公式放在括号内
+\texorpdfstring{}{}%想在标题中加入数学公式时，把公式放在第一个括号内，如：\subsection{The classes \texorpdfstring{$\mathcal{L}(\gamma)$}{Lg}}
 \addbibresource{../references.bib}%添加参考文献库
 
 
