--- a/Model_Beamer/main.tex
+++ b/Model_Beamer/main.tex
@@ -1,5 +1,9 @@
 \documentclass{Slides_NTU}
 %------------------------------------------------------------
+%不使用默认标题的话
+%\title{\textbf{Study and Application on the Underwater Bionic Surface Adhesion and Anti-Adhesion}}
+%\subtitle{\textbf{A short presentation}}
+%------------------------------------------------------------
 \addbibresource{references.bib} %BibTeX数据文件及位置
 %------------------------------------------------------------
 \begin{document}
