--- a/Model_Beamer/TJU_EN/main.tex
+++ b/Model_Beamer/TJU_EN/main.tex
@@ -1,4 +1,4 @@
-\documentclass{Slides_NTU}
+\documentclass{Slides_TJU}
 %------------------------------------------------------------
 %不使用默认标题的话
 %\title{\textbf{Study and Application on the Underwater Bionic Surface Adhesion and Anti-Adhesion}}
@@ -21,13 +21,11 @@
 %---------------------------------------------------------
 
 
-\input{literature.tex}
 
 
 %---------------------------------------------------------
 %--------------------------Body---------------------------
 %---------------------------------------------------------
-
-\input{ThanksPage.tex}
+\frame{\input{ThanksPage.tex}}
 
 \end{document}
